Fixed spacing issue on previous articles page

--- a/assets/less/reece-trade-outlet.less
+++ b/assets/less/reece-trade-outlet.less
@@ -544,14 +544,14 @@
 .previous-articles {
 
 	.previous-article {
-		margin: 10px 0;
+		margin-top: 10px;
+		margin-bottom: 10px;
 		text-align: center;
 	}
 
 	.previous-article-tag {
 		display: block;
-		margin-top: 10px;
-		margin-bottom: 10px;
+		margin: 10px 0 0;
 	}	
 
 	.accordion-heading.active {
